# Project-Argus

./: .env  README.md  argus.code-workspace  docker-compose.yml
backend/: pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/api/: __init__.py  sources.py
backend/app/models/: __init__.py  source.py
backend/app/schemas/: __init__.py  source.py
backend/argus_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: SETUP.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AddSourcePanel.tsx  CameraFeed.tsx  IntelFeed.tsx  SystemStatus.tsx  TopBar.tsx
frontend/src/hooks/: useStatusWS.ts
frontend/src/types/: index.ts
perception/: pyproject.toml
perception/argus_perception.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
perception/service/: config.py  main.py  models.py
perception/service/ingest/: __init__.py  base.py  file.py  manager.py  mjpeg.py  rtsp.py  webcam.py
perception/service/perceive/: __init__.py
