[project]
name = "argus-perception"
version = "0.1.0"
description = "Argus C2 Perception Service — Camera Ingestion + AI Pipeline"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "opencv-python>=4.10.0",
    "numpy>=1.26.0",
    "redis>=5.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
ai = [
    "ultralytics>=8.3.0",   # YOLO26s (Layer 2)
    "torch>=2.5.0",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
